--- a/src/app/_components/map/map.component.html
+++ b/src/app/_components/map/map.component.html
@@ -1,3 +1,3 @@
 <highcharts-chart [Highcharts]="Highcharts"
-                  [options]="chartOptions">
-</highcharts-chart>
+                  [options]="chartOptions"
+                  style="width: 100%; height: 500px; display: block;"></highcharts-chart>
