--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,10 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+* {
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
 .content {
     padding: 20px;
     text-align: center;
