--- a/src/app/_components/map/map.component.html
+++ b/src/app/_components/map/map.component.html
@@ -1,3 +1,15 @@
-<highcharts-chart [Highcharts]="Highcharts"
-                  [options]="chartOptions"
-                  style="width: 100%; height: 100%; display: block;"></highcharts-chart>
+<div class="map">
+    <div>
+        <h1>Europe</h1>
+    </div>
+
+    <div>
+        <highcharts-chart [Highcharts]="Highcharts"
+                          [options]="chartOptions"
+                          style="width: 100%; height: 100%; display: block;"></highcharts-chart>
+    </div>
+
+    <div>
+        <img src="../../../assets/images/flags/Europe.png">
+    </div>
+</div>
