--- a/src/app/_components/charts/charts.component.html
+++ b/src/app/_components/charts/charts.component.html
@@ -1,1 +1,17 @@
-<p>charts works!</p>
+<div class="chart">
+    <div>
+        <mat-form-field>
+            <mat-label>Select Type</mat-label>
+            <mat-select (selectionChange)="generateChart($event?.value)">
+                <mat-option [value]="'column'">Colum</mat-option>
+                <mat-option [value]="'bar'">Bar</mat-option>
+                <mat-option [value]="'pie'">Pie</mat-option>
+                <mat-option [value]="'line'">Line</mat-option>
+            </mat-select>
+        </mat-form-field>
+    </div>
+    <div>
+        <highcharts-chart [Highcharts]="Highcharts"
+                          [options]="chartOptions"></highcharts-chart>
+    </div>
+</div>
