--- a/src/app/_components/map/map.component.html
+++ b/src/app/_components/map/map.component.html
@@ -5,8 +5,7 @@
 
     <div>
         <highcharts-chart [Highcharts]="Highcharts"
-                          [options]="chartOptions"
-                          style="width: 100%; height: 100%; display: block;"></highcharts-chart>
+                          [options]="chartOptions"></highcharts-chart>
     </div>
 
     <div>
