--- a/src/app/_components/map/map.component.scss
+++ b/src/app/_components/map/map.component.scss
@@ -10,6 +10,12 @@
         letter-spacing: 5px;
     }
 
+    highcharts-chart {
+        width: 100%;
+        height: 100%;
+        display: block;
+    }
+
     img {
         width: 150px;
     }
