--- a/src/app/_components/charts/charts.component.scss
+++ b/src/app/_components/charts/charts.component.scss
@@ -3,9 +3,19 @@
     height: 100%;
     margin: 0 auto;
 
-    div:first-child {
-        margin-right: 100px;
-        text-align: right;
+    > div:first-child {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
+        div:first-child {
+            margin-left: 100px;
+            text-align: left;
+        }
+
+        div:last-child {
+            margin-right: 100px;
+            text-align: right;
+        }
     }
 
     highcharts-chart {
