selected chart on dropdown

--- a/src/app/_components/charts/charts.component.html
+++ b/src/app/_components/charts/charts.component.html
@@ -6,9 +6,10 @@
         <div>
             <mat-form-field>
                 <mat-label>Select Chart Type</mat-label>
-                <mat-select (selectionChange)="generateChart($event?.value)">
+                <mat-select [(value)]="selectedChart"
+                            (valueChange)="generateChart($event)">
                     <mat-option *ngFor="let type of chartTypes"
-                                [value]="type.value">
+                                [value]="type">
                         {{type.name}}
                     </mat-option>
                 </mat-select>
