batch file is implemented

--- a/src/app/_components/map/map.component.html
+++ b/src/app/_components/map/map.component.html
@@ -9,6 +9,6 @@
     </div>
 
     <div>
-        <img src="../../../assets/images/flags/Europe.png">
+        <img src="assets/images/flags/Europe.png">
     </div>
 </div>
